# ComfyUI-Simple-Prompt

./: .gitignore  LICENSE  README.md  README_ARCH.md  SimplePrompt.py  __init__.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme_zh.md  reproduce_parser.ts  reproduce_parser_v2.ts  tsconfig.json  vite.config.mts  vite.debug.config.mts
.agent/rules/: llms.md
data/: default_category.json  default_presets.json  default_tags.parquet
doc/: DESIGN_DOC.md  DESIGN_DOC_EN.md  DESIGN_DOC_ZH.md  FUNCTIONAL_SPEC.md  ROADMAP.md
js/: App-B1aVvdN_.mjs  App-C40dSeP5.mjs  App-C_aBj7j1.mjs  App-EZ7MbX5Q.mjs  App-OZ05F6zf.mjs  App-iFp3p8eF.mjs  i18n-BZPBmgxF.mjs  i18n-BvCIgJ7R.mjs  i18n-CqdWFr5P.mjs  i18n-CuyvlWtB.mjs  i18n-vdOKag5w.mjs  main.js  vue-i18n-BzRCVqyv.mjs  vue-i18n-CDK56dMz.mjs  vue-i18n-DxZpRF9a.mjs  vue.runtime.esm-bundler-C8DxJOnH.mjs  vue.runtime.esm-bundler-DCog0BBo.mjs  vue.runtime.esm-bundler-DMW2pLBK.mjs
js/assets/: main.css
locales/en/: main.json
locales/zh/: main.json
scripts/: check_schema.py  create_sample_data.py  reset_default_tags.py  test_backend.py  test_manager_logic.py
simple_prompt/: __init__.py
simple_prompt/api/: __init__.py  handlers.py
simple_prompt/comfyui/: __init__.py  nodes.py  server.py
simple_prompt/core/: __init__.py  categories.py  config.py  database.py  presets.py  tags.py  utils.py
src/: App.dev.vue  App.vue  dev.ts  i18n.ts  main.ts
src/components/: AutocompleteList.vue  CustomTagModal.vue  ModalWrapper.vue  OtherFunctions.vue  SettingsModal.vue  TagItem.vue  TagManager.vue  TagSearchModal.vue  TextEditor.vue  VisualTagArea.vue
src/utils/: caret.ts  categoryService.ts  duckdbService.ts  metaService.ts  promptParser.ts  settings.ts  types.ts
tests/: test_search.py
